--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="images/banner.jpg" width="75%" alt="banner">
     <h1>Karn Tiwari's Portal</h1>
     <h2>About Me</h2>
-    <p>I am an Electrical and Electronics Engineering Studend at NITK</p>
+    <p>I am an Electrical and Electronics Engineering Student at NITK.</p>
     <p>I am an Artificial Intelligence Enthusiast.</p>
     <h2>Credentials and Portfolio</h2>
 
